--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(mtfind LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(${PROJECT_NAME} "main.cpp")
-target_link_libraries(mtfind PUBLIC pthread)
+
+find_package(Threads REQUIRED)
+
+target_link_libraries(mtfind PUBLIC Threads::Threads)
